new pages for each day

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaiman JS Review</title>
 
-    <script src="script.js"></script>
+    <script src="T2W1D1.js"></script>
+    <script src="T2W1D2.js"></script>
 </head>
 <body>
     <h1>Gaiman JS Review</h1>
