added more stuff

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <script src="T2W1D2.js"></script>
 </head>
 <body>
-    <h1>Gaiman JS Review</h1>
+    <h1>Gaiman Notes</h1>
 </body>
 </html>
